2010-08-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_copy_modules.php
	godmode/agentes/massive_add_alerts.php
	godmode/agentes/massive_delete_agents.php
	godmode/agentes/massive_delete_action_alerts.php
	godmode/agentes/massive_delete_alerts.php
	godmode/agentes/massive_edit_modules.php
	godmode/agentes/massive_operations.php
	godmode/agentes/massive_delete_modules.php
	godmode/agentes/massive_add_action_alerts.php
	godmode/menu.php
	godmode/massive
	godmode/massive/massive_copy_modules.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_agents.php
	godmode/massive/massive_operations.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_delete_modules.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php
	godmode/massive/massive_add_action_alerts.php: Created
	a new section for massive operations and change the 
	structure of the files to new folder

2010-08-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php
	godmode/agentes/module_manager_editor_network.php
	godmode/agentes/module_manager_editor_wmi.php
	godmode/agentes/module_manager_editor_plugin.php
	godmode/agentes/module_manager_editor_prediction.php
	godmode/agentes/module_manager_editor.php: Added the policy linkation
	configuration in the modules form and allowed to modify modules
	config if the module is unlinked

2010-08-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: fixed the function "print_checkbox_extended"
	this function didn't use the parameter $atributes, now yes.

2010-08-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager.php: Change the use of 
	isModuleInPolicy to infoModulePolicy in the case of 
	the fixed bad use of isModuleInPolicy

2010-08-19  Sergio Martin <sergio.martin@artica.es>

	* images/sitemap.png
	images/unlinkpolicy.png
	images/link_error.png
	images/link_delete.png