@@ -140,6 +140,9 @@
 #icon_god-agents {
 	background-image: url(../../images/god1.png);
 }
+#icon_god-massive {
+	background-image: url(../../images/sitemap_color.png);
+}
 #icon_god-services {
 	background-image: url(../../images/box.png);
 }
